--- a/CalendarGhTraiham.html
+++ b/CalendarGhTraiham.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gh TRẠI HẦM - Gp. ĐÀ LẠT</title>
+    <title>Gh. TRẠI HẦM - Gp. ĐÀ LẠT</title>
     <link rel="manifest" href="/giaohoTraiham/manifest.json">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
       <meta name="theme-color" content="#2196f3">
