--- a/CalendarGhTraiham.html
+++ b/CalendarGhTraiham.html
@@ -42,7 +42,7 @@
 
 <!-- Phần Header -->
 <header class="calendar-header">
-    LỊCH PHỤNG VỤ CÔNG GIÁO
+    Gh. TRẠI HẦM - Gp. ĐÀ LẠT
 </header>
 
 <div class="modal reading-modal" id="readingModal">
